<resources>
    <string name="app_name">ND940C3-Project</string>
    <string name="app_description">Download files from Internet</string>
    <string name="action_settings">Settings</string>


    <string name="notification_title">Udacity: Android Kotlin Nanodegree </string>
    <string name="notification_description">The Project 3 repository is downloaded</string>
    <string name="notification_button">See changes</string>

    <string name="button_name">Click me</string>
    <string name="button_loading">We are loading </string>
    <string name="title_activity_detail">DetailActivity</string>
    <string name="Download">Download</string>

    <string name="glide">Glide -Image Loading Library by Bump Tech</string>
    <string name="laodApp">LoadApp -Current repository by Udacity</string>
    <string name="retrofit">Retrofit - Type-safe HTTP client for android and Kotlin by Square, Inc</string>
    <string name="toast">Please select the file to download</string>
    <string name="download">Download</string>
    <string name="downloading">We are loading</string>

    <string name="download_details">Download Details</string>
    <string name="details_channel_id" translatable="false">details_channel</string>
    <string name="details_channel_name" translatable="false">Details</string>
    <string name="file_ready">Your download is complete!</string>
    <string name="ok">Ok</string>
    <string name="file_name">File name:</string>
    <string name="status">Status:</string>
</resources>
