<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.motion.widget.MotionLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/contentDetailFrame"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".DetailActivity"
    tools:showIn="@layout/activity_detail"
    app:layoutDescription="@xml/detail">


    <TextView
        android:id="@+id/file_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="@dimen/spacing_normal"
        android:layout_marginEnd="@dimen/spacing_normal"
        app:layout_constraintBaseline_toBaselineOf="@id/file_name_value"
        android:text="@string/file_name"/>

    <TextView
        android:id="@+id/status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/file_name"
        app:layout_constraintBaseline_toBaselineOf="@id/status_value"
        android:layout_marginTop="@dimen/spacing_normal"
        android:layout_marginEnd="@dimen/spacing_normal"
        android:text="@string/status" />

    <TextView
        android:id="@+id/file_name_value"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="@dimen/spacing_normal"
        tools:text="@string/glide" />

    <TextView
        android:id="@+id/status_value"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/file_name_value"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="@dimen/spacing_normal"
        tools:text="@string/status" />



</androidx.constraintlayout.motion.widget.MotionLayout>